--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alexpxmort.github.io/Monters-Rolodex/monsters",
+  "homepage": "https://alexpxmort.github.io/Monsters",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
